Adicionando a estilização (CSS) do exercício de HTML

--- a/quinzena3/sistema-loja/ctrl-estoque.html
+++ b/quinzena3/sistema-loja/ctrl-estoque.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Brownies da Lu</title>
 </head>
 <body>
     <div>
-        <p><i><u>Brownies da Lu</u></i></p>
+        <p><i><u><b>Brownies da Lu</b></u></i></p>
     </div>
     
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+    <div class="linksCtrl">
+        <a href="index.html"><b>Página Inicial</b></a>
+        <a href="ctrl-estoque.html"><b>Controle de Estoque</b></a>
+        <a href="add-produto.html"><b>Adicionar Produto</b></a>
+        <a href="funcionarios.html"><b>Funcionários</b></a>
     </div>
 
     <h2>Controle de Estoque</h2>
@@ -29,35 +30,35 @@
         </tr>
 
         <tr>
-            <td><img src="img/BrownieTradicional.jpeg" alt="Brownie tradicional"/></td>
+            <td><img src="img/BrownieTradicional.jpeg" alt="Brownie tradicional" height="200" width="200"/></td>
             <td> Brownie tradicional </td>
             <td> 4,50 </td>
             <td> 200 </td>
         </tr>
 
         <tr>
-            <td><img src="img/BrownieNutella.jpeg" alt="Brownie de Nutella"/></td>
+            <td><img src="img/BrownieNutella.jpeg" alt="Brownie de Nutella" height="200" width="200"/></td>
             <td> Brownie de nutella </td>
             <td> 5,50 </td>
             <td> 100 </td>
         </tr>
 
         <tr>
-            <td><img src="img/BrownieDoceDeLeite.jpeg" alt="Brownie de doce de leite"/></td>
+            <td><img src="img/BrownieDoceDeLeite.jpeg" alt="Brownie de doce de leite" height="200" width="200"/></td>
             <td> Brownie de doce de leite </td>
             <td> 5,50 </td>
             <td> 100 </td>
         </tr>
 
         <tr>
-            <td><img src="img/BrownieBrigadeiroBranco.jpeg" alt="Brownie de brigadeiro branco"/></td>
+            <td><img src="img/BrownieBrigadeiroBranco.jpeg" alt="Brownie de brigadeiro branco" height="200" width="200"/></td>
             <td> Brownie de brigadeiro branco </td>
             <td> 5,50 </td>
             <td> 100 </td>
         </tr>
 
         <tr>
-            <td><img src="img/BrownieNinho.jpeg" alt="Brownie de ninho"></td>
+            <td><img src="img/BrownieNinho.jpeg" alt="Brownie de ninho" height="200" width="200"></td>
             <td> Brownie de ninho </td>
             <td> 5,50 </td>
             <td> 100 </td>
