--- a/quinzena3/sistema-loja/add-produto.html
+++ b/quinzena3/sistema-loja/add-produto.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Brownies da Lu</title>
 </head>
 <body>
     <div>
-        <p><i><u>Brownies da Lu</u></i></p>
+        <p><i><u><b>Brownies da Lu</b></u></i></p>
     </div>
     
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+    <div class="linksProduto">
+        <a href="index.html"><b>Página Inicial</b></a>
+        <a href="ctrl-estoque.html"><b>Controle de Estoque</b></a>
+        <a href="add-produto.html"><b>Adicionar Produto</b></a>
+        <a href="funcionarios.html"><b>Funcionários</b></a>
     </div>
 
     
