--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -4,35 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Brownies da Lu</title>
 </head>
 <body>
     <div>
-        <h1>Bem-vinde ao <em>Brownies da Lu</em>!</h1>
-        <p>A melhor loja de brownies do estado do Rio!</p>
-        <p> Venha já nos visitar!</p>
+        <h1 class="nomeDaLoja"><em><u>Brownies da Lu</u></em></h1>
     </div>
 
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <p class="fraseDeChamada">Venha conhecer a melhor loja de brownies do estado do Rio!</p>
     </div>
 
-    <div>
+    <div class="links">
+        <a href="index.html"><b>Página Inicial</b></a>
+        <a href="ctrl-estoque.html"> <b>Controle de Estoque</b></a>
+        <a href="add-produto.html"><b>Adicionar Produto</b></a>
+        <a href="funcionarios.html"><b>Funcionários</b></a>
+    </div>
+
+    <div class="segundaFrase">
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
         <p>O nosso catálogo de produtos inclui diversos tipos de brownies recheados. Faça já o seu pedido e delicie-se com os brownies da Lu!</p>
     </div>
 
-    <div>
+    <div class="seguirNasRedes">
         <p>Siga-nos nas redes sociais!</p>
+    </div>    
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <div class="fotos">
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"height="50" width="50"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"height="50" width="50"/>
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"height="50" width="50"/>
         </div>
-    </div>
 </body>
 </html>
